debug: remove unnecessary parts for reproducing the bug

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,59 +13,9 @@ jobs:
           - ghc: '8.10.3'
             os: ubuntu-latest
             stack_yaml: 'stack-ghc-8.10.yaml'
-            stack_args: '--coverage --haddock --no-haddock-deps'
-            flags: '--flag toysolver:BuildToyFMF --flag toysolver:BuildSamplePrograms --flag toysolver:BuildMiscPrograms --flag toysolver:OpenCL'
-            coveralls: true
-#
-#          - ghc: '8.10.3'
-#            os: macos-latest
-#            stack_yaml: 'stack-ghc-8.10.yaml'
-#            stack_args: ''
-#            flags: '--flag toysolver:BuildToyFMF --flag toysolver:BuildSamplePrograms --flag toysolver:BuildMiscPrograms'
-#            coveralls: false
-#          - ghc: '8.10.3'
-#            os: windows-latest
-#            stack_yaml: 'stack-ghc-8.10.yaml'
-#            stack_args: ''
-#            flags: '--flag toysolver:BuildToyFMF --flag toysolver:BuildSamplePrograms --flag toysolver:BuildMiscPrograms'
-#            coveralls: false
-#          - ghc: '8.6.3'
-#            os: windows-latest
-#            stack_yaml: 'stack-windows-i386.yaml'
-#            stack_args: ''
-#            flags: '--flag toysolver:BuildToyFMF --flag toysolver:BuildSamplePrograms --flag toysolver:BuildMiscPrograms'
-#            coveralls: false
-#
-#          - ghc: '8.8.4'
-#            os: ubuntu-latest
-#            stack_yaml: 'stack-ghc-8.8.yaml'
-#            stack_args: ''
-#            flags: '--flag toysolver:BuildToyFMF --flag toysolver:BuildSamplePrograms --flag toysolver:BuildMiscPrograms --flag toysolver:OpenCL'
-#            coveralls: false
-#          - ghc: '8.6.5'
-#            os: ubuntu-latest
-#            stack_yaml: 'stack-ghc-8.6.yaml'
-#            stack_args: ''
-#            flags: '--flag toysolver:BuildToyFMF --flag toysolver:BuildSamplePrograms --flag toysolver:BuildMiscPrograms --flag toysolver:OpenCL'
-#            coveralls: false
-#          - ghc: '8.4.4'
-#            os: ubuntu-latest
-#            stack_yaml: 'stack-ghc-8.4.yaml'
-#            stack_args: ''
-#            flags: '--flag toysolver:BuildToyFMF --flag toysolver:BuildSamplePrograms --flag toysolver:BuildMiscPrograms --flag toysolver:OpenCL'
-#            coveralls: false
-#          - ghc: '8.2.2'
-#            os: ubuntu-latest
-#            stack_yaml: 'stack-ghc-8.2.yaml'
-#            stack_args: ''
-#            flags: '--flag toysolver:BuildToyFMF --flag toysolver:BuildSamplePrograms --flag toysolver:BuildMiscPrograms --flag toysolver:OpenCL'
-#            coveralls: false
-#          - ghc: '8.0.2'
-#            os: ubuntu-latest
-#            stack_yaml: 'stack-ghc-8.0.yaml'
-#            stack_args: ''
-#            flags: '--flag toysolver:BuildToyFMF --flag toysolver:BuildSamplePrograms --flag toysolver:BuildMiscPrograms --flag toysolver:OpenCL'
-#            coveralls: false
+            stack_args: '--coverage'
+            flags: ''
+            coveralls: false
     steps:
       - uses: actions/checkout@v2
         with:
