--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -386,64 +386,6 @@ Library
   ghc-options: -g
   -- GHC-Prof-Options: -auto-all
 
-Executable toysolver
-  Main-is: toysolver.hs
-  HS-Source-Dirs: app
-  Build-Depends:
-    array,
-    base,
-    containers,
-    data-default-class,
-    filepath,
-    MIP,
-    OptDir,
-    -- maybeReader is available on optparse-applicative >=0.13.0.0
-    optparse-applicative >=0.13,
-    pseudo-boolean,
-    scientific,
-    toysolver
-  Default-Language: Haskell2010
-  Other-Extensions: CPP
-  GHC-Options: -rtsopts -threaded
-  if flag(ForceChar8)
-    CPP-OPtions: "-DFORCE_CHAR8"
-  if flag(LinuxStatic)
-    GHC-Options: -static -optl-static -optl-pthread
-  -- GHC-Prof-Options: -auto-all
-
-Executable toysat
-  Main-is: toysat.hs
-  HS-Source-Dirs: app/toysat
-  Build-Depends:
-    array,
-    base,
-    bytestring,
-    containers,
-    clock,
-    data-default-class,
-    filepath,
-    megaparsec,
-    MIP,
-    mwc-random,
-    -- maybeReader is available on optparse-applicative >=0.13.0.0
-    optparse-applicative >=0.13,
-    pseudo-boolean,
-    scientific,
-    time,
-    toysolver,
-    unbounded-delays,
-    vector
-  Default-Language: Haskell2010
-  Other-Extensions: ScopedTypeVariables, CPP
-  GHC-Options: -rtsopts -threaded
-  -- GHC-Prof-Options: -auto-all
-  if flag(ForceChar8)
-    CPP-OPtions: "-DFORCE_CHAR8"
-  if flag(WithZlib)
-    CPP-Options: "-DWITH_ZLIB"
-  if flag(LinuxStatic)
-    GHC-Options: -static -optl-static -optl-pthread
-
 Foreign-Library     toysat-ipasir
   type:             native-shared
   if os(Windows)
@@ -458,534 +400,8 @@ Foreign-Library     toysat-ipasir
   hs-source-dirs:   app/toysat-ipasir
   include-dirs:     app/toysat-ipasir
   c-sources:        app/toysat-ipasir/cbits.c
-  ghc-options:      -g
+  ghc-options:      -debug -g
   cpp-options:      -DIPASIR_SHARED_LIB -DBUILDING_IPASIR_SHARED_LIB
   includes:         ipasir.h
   other-modules:    IPASIR
   default-language: Haskell2010
-
-Executable toysmt
-  HS-Source-Dirs: app/toysmt, Smtlib
-  Main-is: toysmt.hs
-  Other-Modules:
-     ToySolver.SMT.SMTLIB2Solver,
-     -- Following modules are copied from SmtLib package.
-     -- http://hackage.haskell.org/package/SmtLib
-     -- https://github.com/MfesGA/Smtlib
-     Smtlib.Parsers.CommonParsers,
-     Smtlib.Parsers.ResponseParsers,
-     Smtlib.Parsers.CommandsParsers,
-     Smtlib.Syntax.Syntax,
-     Smtlib.Syntax.ShowSL
-  Build-Depends:
-    base,
-    containers,
-    -- TODO: remove intern dependency
-    intern,
-    mtl,
-    optparse-applicative,
-    parsec >=3.1.2 && <4,
-    toysolver,
-    text,
-    transformers,
-    transformers-compat
-  if flag(UseHaskeline)
-    Build-Depends: haskeline >=0.7 && <0.9
-    CPP-Options: "-DUSE_HASKELINE_PACKAGE"
-  Default-Language: Haskell2010
-  Other-Extensions: ScopedTypeVariables, CPP
-  GHC-Options: -rtsopts
-  -- GHC-Prof-Options: -auto-all
-  if flag(ForceChar8)
-    CPP-OPtions: "-DFORCE_CHAR8"
-  if flag(LinuxStatic)
-    GHC-Options: -static -optl-static -optl-pthread
-
-Executable toyqbf
-  Main-is: toyqbf.hs
-  HS-Source-Dirs: app
-  Build-Depends:
-    base,
-    containers,
-    data-default-class,
-    optparse-applicative,
-    toysolver
-  Default-Language: Haskell2010
-  Other-Extensions: ScopedTypeVariables, CPP
-  GHC-Options: -rtsopts
-  -- GHC-Prof-Options: -auto-all
-  if flag(ForceChar8)
-    CPP-OPtions: "-DFORCE_CHAR8"
-  if flag(LinuxStatic)
-    GHC-Options: -static -optl-static -optl-pthread
-
-Executable toyfmf
-  If !flag(BuildToyFMF)
-    Buildable: False
-  Main-is: toyfmf.hs
-  HS-Source-Dirs: app
-  If flag(BuildToyFMF)
-    Build-Depends:
-      base,
-      containers,
-      intern,
-      logic-TPTP >=0.4.6.0 && <0.5,
-      optparse-applicative,
-      text,
-      toysolver
-  Default-Language: Haskell2010
-  Other-Extensions: CPP
-  GHC-Options: -rtsopts
-  if flag(ForceChar8)
-    CPP-OPtions: "-DFORCE_CHAR8"
-  if flag(LinuxStatic)
-    GHC-Options: -static -optl-static -optl-pthread
-  -- GHC-Prof-Options: -auto-all
-
--- Converters
-
-Executable toyconvert
-  Main-is: toyconvert.hs
-  HS-Source-Dirs: app
-  Build-Depends:
-    base,
-    ansi-wl-pprint,
-    bytestring,
-    bytestring-builder,
-    data-default-class,
-    filepath,
-    MIP,
-    optparse-applicative,
-    pseudo-boolean,
-    scientific,
-    text,
-    toysolver
-  Default-Language: Haskell2010
-  Other-Extensions: CPP
-  GHC-Options: -rtsopts
-  -- GHC-Prof-Options: -auto-all
-  if flag(ForceChar8)
-    CPP-OPtions: "-DFORCE_CHAR8"
-  if flag(WithZlib)
-    CPP-Options: "-DWITH_ZLIB"
-  if flag(LinuxStatic)
-    GHC-Options: -static -optl-static -optl-pthread
-
--- Sample Programs
-
-Executable sudoku
-  If !flag(BuildSamplePrograms)
-    Buildable: False
-  Main-is: sudoku.hs
-  HS-Source-Dirs: samples/programs/sudoku
-  Build-Depends:
-    array,
-    base,
-    toysolver
-  Default-Language: Haskell2010
-  Other-Extensions: CPP
-  GHC-Options: -rtsopts
-  if flag(ForceChar8)
-    CPP-OPtions: "-DFORCE_CHAR8"
-  if flag(LinuxStatic)
-    GHC-Options: -static -optl-static -optl-pthread
-
-Executable nonogram
-  If !flag(BuildSamplePrograms)
-    Buildable: False
-  Main-is: nonogram.hs
-  HS-Source-Dirs: samples/programs/nonogram
-  Build-Depends:
-    array,
-    base,
-    containers,
-    toysolver
-  Default-Language: Haskell2010
-  Other-Extensions: CPP
-  GHC-Options: -rtsopts
-  -- GHC-Prof-Options: -auto-all
-  if flag(ForceChar8)
-    CPP-OPtions: "-DFORCE_CHAR8"
-  if flag(LinuxStatic)
-    GHC-Options: -static -optl-static -optl-pthread
-
-Executable nqueens
-  If !flag(BuildSamplePrograms)
-    Buildable: False
-  Main-is: nqueens.hs
-  HS-Source-Dirs: samples/programs/nqueens
-  Build-Depends:
-    array,
-    base,
-    toysolver
-  Default-Language: Haskell2010
-  Other-Extensions: CPP
-  GHC-Options: -rtsopts
-  -- GHC-Prof-Options: -auto-all
-  if flag(ForceChar8)
-    CPP-OPtions: "-DFORCE_CHAR8"
-  if flag(LinuxStatic)
-    GHC-Options: -static -optl-static -optl-pthread
-
-Executable numberlink
-  If !flag(BuildSamplePrograms)
-    Buildable: False
-  Main-is: numberlink.hs
-  HS-Source-Dirs: samples/programs/numberlink
-  Build-Depends:
-    array,
-    base,
-    bytestring,
-    containers,
-    data-default-class,
-    parsec,
-    pseudo-boolean,
-    toysolver
-  Default-Language: Haskell2010
-  Other-Extensions: CPP
-  GHC-Options: -rtsopts
-  -- GHC-Prof-Options: -auto-all
-  if flag(ForceChar8)
-    CPP-OPtions: "-DFORCE_CHAR8"
-  if flag(LinuxStatic)
-    GHC-Options: -static -optl-static -optl-pthread
-
-Executable knapsack
-  If !flag(BuildSamplePrograms)
-    Buildable: False
-  Main-is: knapsack.hs
-  HS-Source-Dirs: samples/programs/knapsack
-  Build-Depends:
-    base,
-    toysolver
-  Default-Language: Haskell2010
-  Other-Extensions: CPP
-  GHC-Options: -rtsopts
-  -- GHC-Prof-Options: -auto-all
-  if flag(ForceChar8)
-    CPP-OPtions: "-DFORCE_CHAR8"
-  if flag(LinuxStatic)
-    GHC-Options: -static -optl-static -optl-pthread
-
-Executable assign
-  If !flag(BuildSamplePrograms)
-    Buildable: False
-  Main-is: assign.hs
-  HS-Source-Dirs: samples/programs/assign
-  Build-Depends:
-    attoparsec,
-    base,
-    bytestring,
-    containers,
-    toysolver,
-    vector
-  Default-Language: Haskell2010
-  Other-Extensions: CPP
-  GHC-Options: -rtsopts
-  -- GHC-Prof-Options: -auto-all
-  if flag(ForceChar8)
-    CPP-OPtions: "-DFORCE_CHAR8"
-  if flag(LinuxStatic)
-    GHC-Options: -static -optl-static -optl-pthread
-
-Executable shortest-path
-  If !flag(BuildSamplePrograms)
-    Buildable: False
-  Main-is: shortest-path.hs
-  HS-Source-Dirs: samples/programs/shortest-path
-  Build-Depends:
-    base,
-    bytestring,
-    containers,
-    unordered-containers,
-    toysolver
-  Default-Language: Haskell2010
-  Other-Extensions: CPP
-  GHC-Options: -rtsopts
-  -- GHC-Prof-Options: -auto-all
-  if flag(ForceChar8)
-    CPP-OPtions: "-DFORCE_CHAR8"
-  if flag(LinuxStatic)
-    GHC-Options: -static -optl-static -optl-pthread
-
-Executable htc
-  If !flag(BuildSamplePrograms)
-    Buildable: False
-  Main-is: htc.hs
-  HS-Source-Dirs: samples/programs/htc
-  Build-Depends:
-    base,
-    containers,
-    toysolver
-  Default-Language: Haskell2010
-  Other-Extensions: CPP
-  GHC-Options: -rtsopts
-  -- GHC-Prof-Options: -auto-all
-  if flag(ForceChar8)
-    CPP-OPtions: "-DFORCE_CHAR8"
-  if flag(LinuxStatic)
-    GHC-Options: -static -optl-static -optl-pthread
-
-Executable svm2lp
-  If !flag(BuildSamplePrograms)
-    Buildable: False
-  Main-is: svm2lp.hs
-  HS-Source-Dirs: samples/programs/svm2lp
-  Build-Depends:
-    base,
-    containers,
-    data-default-class,
-    MIP,
-    scientific,
-    split,
-    text,
-    toysolver
-  Default-Language: Haskell2010
-  Other-Extensions: CPP
-  GHC-Options: -rtsopts
-  -- GHC-Prof-Options: -auto-all
-  if flag(ForceChar8)
-    CPP-OPtions: "-DFORCE_CHAR8"
-  if flag(LinuxStatic)
-    GHC-Options: -static -optl-static -optl-pthread
-
-Executable survey-propagation
-  if !flag(BuildSamplePrograms)
-    Buildable: False    
-  Main-is: survey-propagation.hs
-  HS-Source-Dirs: samples/programs/survey-propagation
-  Build-Depends:
-    base,
-    data-default-class,
-    toysolver
-  if flag(OpenCL)
-    Build-Depends: OpenCL
-    CPP-Options: "-DENABLE_OPENCL"
-  Default-Language: Haskell2010
-  Other-Extensions: CPP
-  -- We use threaded RTS to avoid the error "schedule: re-entered unsafely.
-  -- Perhaps a 'foreign import unsafe' should be 'safe'?" on NVIDIA CUDA.
-  GHC-Options: -rtsopts -threaded
-  -- GHC-Prof-Options: -auto-all
-  if flag(ForceChar8)
-    CPP-Options: "-DFORCE_CHAR8"
-  if flag(LinuxStatic)
-    GHC-Options: -static -optl-static -optl-pthread
-
-Executable probsat
-  if !flag(BuildSamplePrograms)
-    Buildable: False    
-  Main-is: probsat.hs
-  HS-Source-Dirs: samples/programs/probsat
-  Build-Depends:
-    base,
-    clock,
-    data-default-class,
-    mwc-random,
-    optparse-applicative,
-    vector,
-    toysolver
-  Default-Language: Haskell2010
-  Other-Extensions: CPP
-  GHC-Options: -rtsopts
-  -- GHC-Prof-Options: -auto-all
-  if flag(ForceChar8)
-    CPP-Options: "-DFORCE_CHAR8"
-  if flag(LinuxStatic)
-    GHC-Options: -static -optl-static -optl-pthread
-
--- Misc Programs
-
-Executable pigeonhole
-  If !flag(BuildMiscPrograms)
-    Buildable: False
-  Main-is: pigeonhole.hs
-  HS-Source-Dirs: app
-  Build-Depends:
-    base,
-    bytestring,
-    containers,
-    pseudo-boolean,
-    toysolver
-  Default-Language: Haskell2010
-  Other-Extensions: CPP
-  GHC-Options: -rtsopts
-  -- GHC-Prof-Options: -auto-all
-  if flag(ForceChar8)
-    CPP-OPtions: "-DFORCE_CHAR8"
-  if flag(LinuxStatic)
-    GHC-Options: -static -optl-static -optl-pthread
-
-Executable maxsatverify
-  If !flag(BuildMiscPrograms)
-    Buildable: False
-  Main-is: maxsatverify.hs
-  HS-Source-Dirs: app
-  Build-Depends:
-    array,
-    base,
-    toysolver
-  Default-Language: Haskell2010
-  Other-Extensions: CPP
-  GHC-Options: -rtsopts
-  -- GHC-Prof-Options: -auto-all
-  if flag(ForceChar8)
-    CPP-OPtions: "-DFORCE_CHAR8"
-  if flag(LinuxStatic)
-    GHC-Options: -static -optl-static -optl-pthread
-
-Executable pbverify
-  Main-is: pbverify.hs
-  If !flag(BuildMiscPrograms)
-    Buildable: False
-  HS-Source-Dirs: app
-  Build-Depends:
-    array,
-    base,
-    pseudo-boolean,
-    toysolver
-  Default-Language: Haskell2010
-  Other-Extensions: CPP
-  GHC-Options: -rtsopts
-  -- GHC-Prof-Options: -auto-all
-  if flag(ForceChar8)
-    CPP-OPtions: "-DFORCE_CHAR8"
-  if flag(LinuxStatic)
-    GHC-Options: -static -optl-static -optl-pthread
-
--- Test suites and benchmarks
-
-Test-suite TestPolynomial
-  Type:              exitcode-stdio-1.0
-  HS-Source-Dirs:    test
-  Main-is:           TestPolynomial.hs
-  Build-depends:
-    base,
-    containers,
-    data-interval,
-    finite-field >=0.7.0 && <1.0.0,
-    pretty,
-    tasty >=0.10.1,
-    tasty-hunit >=0.9 && <0.11,
-    tasty-quickcheck >=0.8 && <0.11,
-    tasty-th,
-    toysolver
-  Default-Language: Haskell2010
-  Other-Extensions: TemplateHaskell
-
-Test-suite TestSuite
-  Type:              exitcode-stdio-1.0
-  HS-Source-Dirs:    test Smtlib app/toysmt
-  Main-is:           TestSuite.hs
-  Other-Modules:
-    Test.AReal
-    Test.AReal2
-    Test.Arith
-    Test.BitVector
-    Test.BoolExpr
-    Test.BipartiteMatching
-    Test.CNF
-    Test.CongruenceClosure
-    Test.ContiTraverso
-    Test.Converter
-    Test.Delta
-    Test.FiniteModelFinder
-    Test.GraphShortestPath
-    Test.HittingSets
-    Test.Knapsack
-    Test.Misc
-    Test.MIPSolver
-    Test.ProbSAT
-    Test.QBF
-    Test.QUBO
-    Test.SAT
-    Test.SAT.Encoder
-    Test.SAT.ExistentialQuantification
-    Test.SAT.MUS
-    Test.SAT.TheorySolver
-    Test.SAT.Types
-    Test.SAT.Utils
-    Test.SDPFile
-    Test.Simplex
-    Test.SimplexTextbook
-    Test.SMT
-    Test.SMTLIB2Solver
-    Test.Smtlib
-    Test.SubsetSum
-    ToySolver.SMT.SMTLIB2Solver
-    Smtlib.Parsers.CommonParsers
-    Smtlib.Parsers.ResponseParsers
-    Smtlib.Parsers.CommandsParsers
-    Smtlib.Syntax.Syntax
-    Smtlib.Syntax.ShowSL
-  Build-depends:
-    array,
-    base,
-    bytestring,
-    bytestring-builder,
-    containers,
-    data-default-class,
-    data-interval,
-    deepseq,
-    hashable,
-    intern,
-    lattices,
-    megaparsec,
-    mtl,
-    mwc-random,
-    OptDir,
-    parsec >=3.1.2 && <4,
-    pseudo-boolean,
-    -- sublistOf is available on QuickCheck >=2.8
-    QuickCheck >=2.8 && <3,
-    scientific,
-    tasty >=0.10.1,
-    tasty-hunit >=0.9 && <0.11,
-    tasty-quickcheck >=0.8 && <0.11,
-    tasty-th,
-    text,
-    toysolver,
-    transformers,
-    transformers-compat,
-    unordered-containers,
-    vector,
-    vector-space
-  Default-Language: Haskell2010
-  Other-Extensions:
-    CPP
-    DataKinds
-    ScopedTypeVariables
-    TemplateHaskell
-
-Benchmark BenchmarkSATLIB
-  type:             exitcode-stdio-1.0
-  hs-source-dirs:   benchmarks
-  main-is:          BenchmarkSATLIB.hs
-  build-depends:
-    array,
-    base,
-    criterion >=1.0 && <1.6,
-    data-default-class,
-    toysolver
-  Default-Language: Haskell2010
-
-Benchmark BenchmarkKnapsack
-  type:             exitcode-stdio-1.0
-  hs-source-dirs:   benchmarks
-  main-is:          BenchmarkKnapsack.hs
-  build-depends:
-    base,
-    criterion >=1.0 && <1.6,
-    toysolver
-  Default-Language: Haskell2010
-
-Benchmark BenchmarkSubsetSum
-  type:             exitcode-stdio-1.0
-  hs-source-dirs:   benchmarks
-  main-is:          BenchmarkSubsetSum.hs
-  build-depends:
-    base,
-    criterion >=1.0 && <1.6,
-    toysolver,
-    vector
-  Default-Language: Haskell2010
