--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -458,6 +458,7 @@ Foreign-Library     toysat-ipasir
   hs-source-dirs:   app/toysat-ipasir
   include-dirs:     app/toysat-ipasir
   c-sources:        app/toysat-ipasir/cbits.c
+  cc-options:       -Wall
   cpp-options:      -DIPASIR_SHARED_LIB -DBUILDING_IPASIR_SHARED_LIB
   includes:         ipasir.h
   other-modules:    IPASIR
