run genipaessentials under valrind

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -84,7 +84,7 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           sudo apt-get update
-          sudo apt-get install ocl-icd-opencl-dev
+          sudo apt-get install ocl-icd-opencl-dev valgrind
 
       - uses: actions/cache@v1
         name: Cache ~/.stack
@@ -132,7 +132,11 @@ jobs:
             export LD_LIBRARY_PATH=`stack path --local-install-root`/lib:$LD_LIBRARY_PATH
           fi
           # "stack exec --" is necessary on windows-i386 for adding path of libstdc++
-          stack exec -- ./genipaessentials misc/genipaessentials/inputs/sat100.cnf
+          if [[ ${{ runner.os }} = "Linux" ]]; then
+            stack exec -- valgrind ./genipaessentials misc/genipaessentials/inputs/sat100.cnf
+          else
+            stack exec -- ./genipaessentials misc/genipaessentials/inputs/sat100.cnf
+          fi
 
       - name: Coveralls
         if: matrix.coveralls
