--- a/stack-ghc-8.10.yaml
+++ b/stack-ghc-8.10.yaml
@@ -15,7 +15,7 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: lts-17.1
+resolver: nightly-2020-12-14
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
