--- a/.travis.yml
+++ b/.travis.yml
@@ -87,7 +87,7 @@ after_script:
 deploy:
   provider: releases
   api_key:
-    secure: N3Gggk5lO32YKANw2M3XfNklyxIB6tCfrlfONOQFnoTIcVFemkNXjXnT+VUxrb0dYDYv4/0meuEBq38B4Rf7e4YQteWtb7dX092BDHPLW5sSlbvrUqxb3PSngqmKs1/fgmJFN5M8GZJqgnsvRVd3G5QQxmzNQKl2vx5bTo5j4tY=
+    secure: "5vnpI46rA4Uk1Ircf4AslxOYlnXMroW1511k1K6Ip9oDxla19xc2HViyHaegNP5utLDURdJShbfIUosQUzlcSVYamPLynrUCDBhwJKetnwjM6c/3ApkhzMsa9ZKn3v37i3joUD9zrkK6R0PHtD6Qkn/Ja15mqtfjf5XFl1tw7LY="
   file_glob: true
   file: '*.tar.xz'
   skip_cleanup: true
