travis: fix build_artifacts.hs invocation
The bug was introduced in a77e48e27315cf37ac5d3f1963f8ad6edfd92487 .

--- a/.travis.yml
+++ b/.travis.yml
@@ -68,9 +68,7 @@ install:
 script:
 # Build the package, its tests, and its docs and run the tests
 - stack --jobs 2 --no-terminal test --bench --no-run-benchmarks $FLAGS
-- if [ -n "$RELEASE" ]; then
-    stack runghc --package turtle misc/build_artifacts.hs
-  fi
+- if [ -n "$RELEASE" ]; then stack runghc --package turtle misc/build_artifacts.hs; fi
 
 after_script:
 - |
