--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -136,15 +136,41 @@ jobs:
       - name: Build artifacts
         run: stack runhaskell ${{ matrix.stack_args }} --package turtle misc/build_artifacts.hs
 
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: binary-packages
+          path: |
+            *.tar.xz
+            *.7z
+          retention-days: 2
+
+  github-release:
+    name: github-release
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags')
+    needs: toysolver
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: true
+
+      - uses: actions/download-artifact@v2
+        with:
+          name: binary-packages
+          path: binary-packages
+
+      - name: Display structure of downloaded files
+        run: ls -R
+
       - name: Upload artifacts to GitHub Release
-        if: startsWith(github.ref, 'refs/tags') && matrix.release
         shell: bash
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           shopt -s nullglob
           assets=()
-          for asset in *.tar.xz *.7z; do
+          for asset in binary-packages/*; do
             assets+=("-a" "$asset")
           done
           tag_name="${GITHUB_REF#refs/tags/}"
