--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -132,7 +132,7 @@ Library
      base >=4.9 && <5,
      bytestring >=0.9.2.1 && <0.12,
      bytestring-builder,
-     bytestring-encoding,
+     bytestring-encoding >=0.1.1.0,
      case-insensitive,
      clock >=0.7.1,
      -- IntMap.restrictKeys and IntMap.withoutKeys require containers >=0.5.8
