--- a/stack-ghc-9.0.yaml
+++ b/stack-ghc-9.0.yaml
@@ -15,7 +15,7 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: nightly-2021-10-02
+resolver: lts-19.16
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
