--- a/stack.yaml
+++ b/stack.yaml
@@ -15,7 +15,7 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: lts-18.28
+resolver: lts-19.16
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -49,9 +49,9 @@ extra-deps:
 - finite-field-0.9.0
 - pseudo-boolean-0.1.10.0@sha256:c6a8b6c23c84cce8cecb37683755bde54db80b1ca817ce72de772c98d31dae44,2552
 - sign-0.4.4
-- OpenCL-1.0.3.4
-# - git: https://github.com/msakai/opencl.git
-#   commit: 80d0cb9d235819cd53e6a36d7a9258bc19d564ab
+# - OpenCL-1.0.3.4
+- git: https://github.com/msakai/opencl.git
+  commit: c979d0473f60efa0a3ebb5fb5986b32753390b7c
 - bytestring-encoding-0.1.1.0
 - MIP-0.1.1.0
 
