--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,7 @@
 FROM haskell:8.10.7
 
+ARG TOYSOLVER_VERSION=0.8.0
+
 # https://github.com/haskell/docker-haskell/issues/81
 RUN if [ "$(dpkg-architecture --query DEB_BUILD_GNU_CPU)" = "aarch64" ]; then \
       apt-get update && \
@@ -7,6 +9,6 @@ RUN if [ "$(dpkg-architecture --query DEB_BUILD_GNU_CPU)" = "aarch64" ]; then \
       apt-get clean && rm -rf /var/lib/apt/lists/*; \
     fi
 
-RUN cabal update && cabal install toysolver --flags="BuildToyFMF BuildSamplePrograms BuildMiscPrograms"
+RUN cabal update && cabal install toysolver-${TOYSOLVER_VERSION} --flags="BuildToyFMF BuildSamplePrograms BuildMiscPrograms"
 WORKDIR /data
 CMD ["bash"]
