--- a/stack-ghc-9.2.yaml
+++ b/stack-ghc-9.2.yaml
@@ -15,7 +15,7 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: nightly-2022-07-23
+resolver: lts-20.7
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
