--- a/toysolver.cabal
+++ b/toysolver.cabal
@@ -131,6 +131,7 @@ Library
   Hs-source-dirs: src
   Build-Depends:
      array >=0.5,
+     async,
      -- GHC >=8.6 && <9.5
      base >=4.12 && <4.18,
      bytestring >=0.9.2.1 && <0.12,
