--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -147,6 +147,10 @@ jobs:
           curl -L https://github.com/lehins/stack-hpc-coveralls/releases/download/v0.0.6.0/shc.tar.gz | tar -xz
           ./shc --repo-token="$COVERALLS_REPO_TOKEN" toysolver TestSuite TestPolynomial
 
+      - name: Test scripts
+        shell: bash
+        run: stack runhaskell ${{ matrix.stack_args }} misc/generate_packageVersions.hs > /dev/null
+
       - name: Build artifacts
         run: stack runhaskell ${{ matrix.stack_args }} --package turtle misc/build_artifacts.hs
 
